refactor: integrate ProductException into ProductService business logic